tests/conditional/conditional.exp
Error ----------------------------------------------------- conditional.js:23:10

Cannot return `x != null ? x : x != null` because:
 - number [1] is incompatible with string [2].
 - boolean [3] is incompatible with string [2].



Found 2 errors
